feat(core):整了一套针对浏览器接口的单元测试